#2158 - aligned nav items and fixed icon size issue

--- a/R4/Files/Templates/Designs/R4/Assets/_src/scss/4-utilities/_icon.scss
+++ b/R4/Files/Templates/Designs/R4/Assets/_src/scss/4-utilities/_icon.scss
@@ -21,3 +21,8 @@ $icon-sizes: (
 		vertical-align: baseline;
 	}
 }
+
+.page-header svg {
+	height: 1.2em;
+	fill: currentColor;
+}
